# Alita-Win

./: .gitignore
Alita/: Alita.cpp  Alita.sln  Alita.vcxproj  Alita.vcxproj.filters  GraphicPipeline.cpp  RenderScene.cpp
Alita/Sources/Base/: Component.cpp  Component.h  Entity.cpp  Entity.h  FileSystem.cpp  FileSystem.h  Macros.h  ObjectBase.cpp  ObjectBase.h  Resource.h  SharedPtr.h
Alita/Sources/Concurrent/: Thread.cpp  Thread.h
Alita/Sources/Engine/: Engine.cpp  Engine.h
Alita/Sources/Event/: EventSystem.cpp  EventSystem.h
Alita/Sources/GFX/: BindGroup.h  BindGroupLayout.h  BindingResource.h  Buffer.h  CommandBuffer.h  Descriptors.h  (+30 more)
Alita/Sources/RHI/Backend/Vulkan/: Android.mk  CMakeLists.txt  CommandList.cpp  CommandList.h  DeferredRenderCommands.cpp  DeferredRenderCommands.h  RenderThreading.cpp  RenderThreading.h  RenderThreadingVkAllocator.h  ShaderHelper.cpp  ShaderHelper.h  VKBindGroup.cpp  VKBindGroup.h  VKBindGroupLayout.cpp  VKBindGroupLayout.h  VKBuffer.cpp  VKBuffer.h  VKCanvasContext.cpp  VKCanvasContext.h  VKCommandBuffer.cpp  VKCommandBuffer.h  VKCommandEncoder.cpp  VKCommandEncoder.h  VKComputePassEncoder.cpp  VKComputePassEncoder.h  VKComputePipeline.cpp  VKComputePipeline.h  VKDevice.cpp  VKDevice.h  VKDevice_Helper.h  VKFence.cpp  VKFence.h  VKFramebuffer.cpp  VKFramebuffer.h  VKPipelineLayout.cpp  VKPipelineLayout.h  VKQuerySet.cpp  VKQuerySet.h  VKQueue.cpp  VKQueue.h  (+30 more)
Alita/Sources/RHI/Backend/Vulkan/StandAlone/: CMakeLists.txt
Alita/Sources/RHI/Backend/Vulkan/VMA/: VmaUsage.h
Alita/Sources/RHI/Backend/Vulkan/glslang/: Android.mk
(+287 files in other folders)
